# Academy

./: .gitignore  README.md  pyproject.toml
rag/chat/: extract_information.py  extract_paper_info.py  organize_paper_structure.py
rag/db/: create_db.py  describe_db.py  organize_db.py
rag/embed/: create_embed.py  md_loader.py  use_embed.py
rag/lib/: miner_u.py
scihub/: batch_download.py
